samples/with-a-kube/components/20_sample_kube_app/namespaces/admin/dashboard/deployment.yaml
# website::tag::1:: Deploy the training/webapp Docker Container: https://hub.docker.com/r/training/webapp/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: hello-world-deployment
spec:
  selector:
    matchLabels:
      app: hello-world
  replicas: 1
  template:
    metadata:
      labels:
        app: hello-world
    spec:
      containers:
        # website::tag::2:: The container runs a Python webapp on port 5000 that responds with "Hello, World!"
        - name: hello-world
          image: ealen/echo-server:0.9.2
          ports:
            - containerPort: 3000
          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
