samples/with-a-kube/components/20_sample_kube_app/namespaces/admin/dashboard/service.yaml
# website::tag::3:: Expose the Python webapp on port 5000 via a Kubernetes LoadBalancer.
kind: Service
apiVersion: v1
metadata:
  name: hello-world-service
spec:
  selector:
    app: hello-world
  ports:
    - protocol: TCP
      targetPort: 3000
      port: 3000
