samples/with-a-kube/components/20_sample_kube_app/namespaces/admin/dashboard/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: dashboard-ingress

  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  ingressClassName: traefik
  rules:
    - host: kube.k2
      http:
        paths:
          - path: /admin/dashboard
            pathType: Prefix
            backend:
              service:
                name: hello-world-service
                port:
                  number: 3000
